2009-04-04 13:10

	* src/: gmameui-gamelist-view.c, interface.c, gmameui.c, gmameui.h
	  filters_list.c, gui_prefs.c, gui_prefs.h, data/main_gui.glade:
	  Add new filter group Status and filters Correct and Best
	  Best Available, add ROM availability filtering buttons
	  (SF Feature Request 2474989)

2009-03-31 22:39

	* po/: gmameui.pot, POTFILES.in: Update pot template and list of
	  source files

2009-03-29 16:08  adburton

	* configure.ac, NEWS: Tagged for new release

2009-02-01 17:53  adburton

	* data/options_legacy.glade: Add Glade file for legacy options

2009-02-01 17:46  adburton

	* src/: callbacks.c, options.c, options.h, properties.c,
	  properties.h: Removed redundant files

2009-02-01 17:40  adburton

	* src/: Makefile.am, callbacks.c, gmameui.c, gui.h,
	  mame_options_legacy.c, mame_options_legacy.h,
	  mame_options_legacy_dialog.c, options_string.c, options_string.h,
	  mame_options_legacy_dialog.h: Replace old XMAME dialog generation
	  with Glade-generated dialog and code to save options, consolidate
	  command line string generation

2008-12-11 00:21  adburton

	* data/rom_info.glade, src/Makefile.am, src/callbacks.c,
	  src/gmameui-rominfo-dlg.c, src/gmameui-rominfo-dlg.h,
	  src/properties.c, src/properties.h: Convert RomInfo dialog to
	  GtkObject, move to separate file

2008-12-10 22:16  adburton

	* src/: callbacks.c, directories.c, directories.h, gui_prefs.c,
	  mame-exec-list.c, mame-exec-list.h: Add new MameExecList
	  functions, convert Directories dialog to a GtkObject

2008-12-07 16:29  adburton

	* data/options.glade, src/mame-exec.c, src/mame_options.c,
	  src/xmame_options.c: Add new supported options, add handling to
	  set dependant widgets based on parents value (e.g. sound and
	  debug)

2008-11-09 20:11  adburton

	* src/: Makefile.am, audit.c, callbacks.c, directories.c,
	  game_list.c, game_list.h, gmameui.c, gmameui.h, gui.c,
	  interface.c, mame-exec-list.c, mame-exec-list.h, mame-exec.c,